# OpenSiv3D-GUIKit

./: .clang-format  .editorconfig  .gitignore  .lgtm.yml  OpenSiv3D GUIKit.sln  README.md
.github/workflows/: build_mac.yml  ci.yml  codeql-analysis.yml  codeql.yml
Aoba/include/Aoba/: Aoba.hpp  AobaCore.hpp  AobaFactory.hpp  AobaInterface.hpp  ColorTheme.hpp  CommandLine.hpp  Constraint.hpp  Core.hpp  DynamicColor.hpp  Factory.hpp  Imaging.hpp  InputEvent.hpp  InputEventHandler.hpp  KeyboardOperation.hpp  Layer.hpp  Layout.hpp  MouseEvent.hpp  Page.hpp  Property.hpp  Timeout.hpp  UIButton.hpp  UICheckBox.hpp  UICircle.hpp  UIComponent.hpp  UIIcon.hpp  UIImageView.hpp  UIInputField.hpp  UIRect.hpp  UISlider.hpp  UITabView.hpp  UIText.hpp  UIToggleButton.hpp  UIVStackView.hpp  UIView.hpp  UnifiedFont.hpp  WindowManager.hpp
Aoba/include/Aoba/Component/: UIBase.hpp  UIButton.hpp  UICheckBox.hpp  UICircle.hpp  UIComponent.hpp  UIIcon.hpp  UIImageView.hpp  UIInputField.hpp  UIRect.hpp  UISlider.hpp  UITabView.hpp  UIText.hpp  UIToggleButton.hpp  (+2 more)
Aoba/src/Algorithm/: Algorithm.hpp
Aoba/src/AobaCore/: AobaCore.cpp  AobaLifeCycle.cpp
Aoba/src/AobaFactory/: AobaFactory.cpp
Aoba/src/AobaInterface/: AobaInterface.cpp
Aoba/src/AobaLog/: AobaLog.cpp  AobaLog.hpp
Aoba/src/ColorTheme/: ColorTheme.cpp
Aoba/src/CommandLine/: CommandLine.cpp
Aoba/src/Component/: UIButton.cpp  UICheckBox.cpp  UICircle.cpp  UIComponent.cpp  UIComponentMouseEvent.cpp  UIIcon.cpp  UIImageView.cpp  UIInputField.cpp  UIRect.cpp  UISlider.cpp  UITabView.cpp  UIText.cpp  UIToggleButton.cpp  UIVStackView.cpp  UIView.cpp
Aoba/src/ComponentStorage/: ComponentStorage.cpp  ComponentStorage.hpp
Aoba/src/Constraint/: Constraint.cpp
Aoba/src/Core/: AobaLifeCycle.cpp  Core.cpp  CoreLifeCycle.cpp  PageCycle.cpp  PageManager.cpp  PageManager.hpp  TaskRunner.cpp  TaskRunner.hpp  Timeout.cpp  WindowManager.cpp  WindowManager.hpp
Aoba/src/Factory/: Factory.cpp
Aoba/src/Imaging/: Imaging.cpp
Aoba/src/InputEvent/: InputEvent.cpp  InputEventManager.cpp  InputEventManager.hpp
Aoba/src/InputEventManager/: InputEventManager.cpp
Aoba/src/IsolatedComponentManager/: IsolatedComponentManager.cpp  IsolatedComponentManager.hpp
Aoba/src/KeyShortcut/: KeyShortcut.cpp  KeyShortcut.hpp
Aoba/src/Layer/: Layer.cpp
Aoba/src/Page/: Page.cpp
Aoba/src/PixelUnit/: PixelUnit.cpp
Aoba/src/Timeout/: Timeout.cpp
Aoba/src/Tooltip/: Tooltip.cpp  Tooltip.hpp
Aoba/src/UnifiedFont/: UnifiedFont.cpp
Aoba/src/WindowManager/: WindowManager.cpp
Dependencies/include/: Siv3D.hpp
GUIKit/include/GUIKit/: ColorTheme.h  ColorTheme.hpp  CommandLine.hpp  Constraint.h  Constraint.hpp  DynamicColor.h  DynamicColor.hpp  GUIFactory.h  GUIFactory.hpp  GUIKit.h  GUIKit.hpp  GUIKitCore.h  GUIKitCore.hpp  GUIKitInterface.h  GUIKitInterface.hpp  IMouseEvent.h  Imaging.h  Imaging.hpp  InputEvent.h  InputEvent.hpp  InputEventHandler.h  InputEventHandler.hpp  Layer.h  Layer.hpp  MouseEvent.h  MouseEvent.hpp  MouseEventHandler.h  Page.h  Page.hpp  PixelUnit.h  PixelUnit.hpp  Timeout.h  Timeout.hpp  UIButton.h  UIButton.hpp  UICheckBox.h  UICheckBox.hpp  UICircle.h  UICircle.hpp  UIComponent.h  (+25 more)
GUIKit/src/ColorTheme/: ColorTheme.cpp
GUIKit/src/CommandLine/: CommandLine.cpp
GUIKit/src/GUIFactory/: GUIFactory.cpp
GUIKit/src/GUIKitCore/: GUIKitCore.cpp  GUIKitLifeCycle.cpp
GUIKit/src/GUIKitInterface/: GUIKitInterface.cpp
GUIKit/src/Imaging/: Imaging.cpp
GUIKit/src/Page/: Page.cpp
GUIKit/src/PixelUnit/: PixelUnit.cpp
GUIKit/src/Timeout/: Timeout.cpp
GUIKit/src/Window/: WindowManager.cpp
GUIKit/src/WindowManager/: WindowManager.cpp
Linux/: CMakeLists.txt
Linux/Example/: CMakeLists.txt
Linux/LaunchTest/: CMakeLists.txt
Linux/Test/: CMakeLists.txt
MacOS/OpenSiv3D GUIKit Test.xcodeproj/: project.pbxproj
MacOS/OpenSiv3D-GUIKit.xcodeproj/: project.pbxproj
OpenSiv3D GUIKit/: OpenSiv3D GUIKit.vcxproj  OpenSiv3D GUIKit.vcxproj.filters
OpenSiv3D GUIKit Test/: Main.cpp  OpenSiv3D GUIKit Test.vcxproj  OpenSiv3D GUIKit Test.vcxproj.filters
OpenSiv3D GUIKit/include/: GUIKit.h
OpenSiv3D GUIKit/include/ColorTheme/: ColorTheme.cpp  ColorTheme.h  DynamicColor.h
OpenSiv3D GUIKit/include/GUIKitCore/: GUIKitCore.cpp  GUIKitCore.h
OpenSiv3D GUIKit/include/Imaging/: Imaging.cpp
OpenSiv3D GUIKit/include/Page/: Page.h
OpenSiv3D GUIKit/include/PixelUnit/: PixelUnit.cpp
OpenSiv3D GUIKit/include/Timeout/: Timeout.cpp  Timeout.h
OpenSiv3D GUIKit/include/UserInterface/: UIButton.h  UICircle.h  UIComponent.h  UIImage.h  UIRect.h  UIText.h  UIVStackView.h  UIView.h
OpenSiv3D GUIKit/include/Window/: WindowManager.cpp  WindowManager.h
OpenSiv3D GUIKit/lib/: OpenSiv3D GUIKit.lib  OpenSiv3D GUIKit_d.lib
Test/: Example.cpp  LaunchTest.cpp
Test/Example/: Example.cpp
Test/LaunchTest/: ComponentsTest.h  FocusTest.h  LaunchTest.cpp  PagingTest.h  Test.cpp  Test.h  Test.hpp
Test/LaunchTest/GUITest/: GUITest.cpp  GUITest.hpp
Test/LaunchTest/UnitTest/: Constraint.hpp  IsMainThread.hpp  UnitTest.hpp
Windows/: Aoba-Example.vcxproj  Aoba-Example.vcxproj.filters  Aoba-LaunchTest.vcxproj  Aoba-LaunchTest.vcxproj.filters  Aoba.sln  Aoba.vcxproj  Aoba.vcxproj.filters  GUIKit-Example.vcxproj  GUIKit-Example.vcxproj.filters  GUIKit-LaunchTest.vcxproj  GUIKit-LaunchTest.vcxproj.filters  Main.cpp  OpenSiv3D GUIKit Test.vcxproj  OpenSiv3D GUIKit Test.vcxproj.filters  OpenSiv3D GUIKit.sln  OpenSiv3D GUIKit.vcxproj  OpenSiv3D GUIKit.vcxproj.filters
Windows/lib/: README.md
macOS/Aoba-Example.xcodeproj/: project.pbxproj
macOS/Aoba-LaunchTest.xcodeproj/: project.pbxproj
macOS/Aoba.xcodeproj/: project.pbxproj
macOS/GUIKit-Example.xcodeproj/: project.pbxproj
macOS/GUIKit-Example.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
macOS/GUIKit-LaunchTest.xcodeproj/: project.pbxproj
macOS/GUIKit.xcworkspace/: contents.xcworkspacedata
macOS/OpenSiv3D GUIKit Test.xcodeproj/: project.pbxproj
macOS/OpenSiv3D-GUIKit-Test.xcodeproj/: project.pbxproj
macOS/OpenSiv3D-GUIKit.xcodeproj/: project.pbxproj
macOS/src/: Main.cpp
(+118 files in other folders)
